--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ result-*
 
 # Ignore automatically generated direnv output
 .direnv
+
+# Ignore the hardware configuration file
+hardware-configuration.nix
